feat(web & server): memory lane filtering
ability to filter photos without album
