# server/src/repositories/asset.repository.ts
@@ -50,8 +50,7 @@ const truncateMap: Record<TimeBucketSize, string> = {
 };
 
 const dateTrunc = (options: TimeBucketOptions) =>
-  `(date_trunc('${
-    truncateMap[options.size]
+  `(date_trunc('${truncateMap[options.size]
   }', (asset."localDateTime" at time zone 'UTC')) at time zone 'UTC')::timestamptz`;
 
 @Instrumentation()
@@ -62,7 +61,8 @@ export class AssetRepository implements IAssetRepository {
     @InjectRepository(ExifEntity) private exifRepository: Repository<ExifEntity>,
     @InjectRepository(AssetJobStatusEntity) private jobStatusRepository: Repository<AssetJobStatusEntity>,
     @InjectRepository(SmartInfoEntity) private smartInfoRepository: Repository<SmartInfoEntity>,
-  ) {}
+    @InjectRepository(AlbumEntity) private albumRepository: Repository<AlbumEntity>,
+  ) { }
 
   async upsertExif(exif: Partial<ExifEntity>): Promise<void> {
     await this.exifRepository.upsert(exif, { conflictPaths: ['assetId'] });
@@ -756,6 +756,10 @@ export class AssetRepository implements IAssetRepository {
       builder.andWhere(
         new Brackets((qb) => qb.where('stack.primaryAssetId = asset.id').orWhere('asset.stackId IS NULL')),
       );
+    }
+
+    if (options.withoutAlbum) {
+      builder.andWhere('NOT EXISTS (SELECT 1 FROM albums_assets_assets WHERE "assetsId" = asset.id)');
     }
 
     return builder;
